test/resources/parser/passing/FunDefs.grading.amy
object FunDefs
  def foo(): Int(32) := () end foo
  def foo(i: Int(32)): Int(32) := 42 end foo
  def foo(i: I, j: Boolean, s: String, u: Unit, x: X): Type := 42 end foo
end FunDefs
