test/resources/parser/failing/FunDefError7.grading.amy
object FunDef
	def foo(i: Int(32)): Int(32) = 42 end
end FunDef